# DiplomaSkydiario

./: .gitignore
.github/workflows/: build-deploy-actions.yaml
deploy/: ci.env  docker-compose-ci.yaml
dev/: docker-compose-db-only.yaml  docker-compose.yaml  nginx.conf
todolist/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
todolist/bot/: models.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_tguser_username_tguser_verification_code.py
todolist/bot/tg/: dc.py
todolist/core/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board.py  0005_boardparticipant_boardparticipant_unique_user_board.py  0006_goalcategory_board.py  0007_create_new_objects.py  0008_alter_goalcategory_board.py  0009_alter_goal_due_date.py
todolist/todolist/: settings.py  urls.py
